Revision history for FreeFont

{{$NEXT}}
    - Initial version